requestAnimationFrame broken with subframes (DisplayRefreshMonitorManager::registerClient fails to register client) https://bugs.webkit.org/show_bug.cgi?id=95360

Patch by Andrew Lo <anlo@rim.com> on 2012-09-27
Reviewed by Simon Fraser.

Source/WebCore:

DisplayRefreshMonitorManager::ensureMonitorForClient currently only adds the DisplayRefreshMonitorClient
to the appropriate DisplayRefreshMonitor when a new monitor is created.
It should also do so when it finds an existing monitor.

Test: fast/animation/request-animation-frame-iframe2.html

* platform/graphics/DisplayRefreshMonitor.cpp:
(WebCore::DisplayRefreshMonitor::addClient):
(WebCore::DisplayRefreshMonitorManager::ensureMonitorForClient):

LayoutTests:

Add a new test which does requestAnimationFrame in both a sub-frame and
main-frame, and checks that both were executed.

* fast/animation/request-animation-frame-iframe2-expected.txt: Added.
* fast/animation/request-animation-frame-iframe2.html: Added.
* fast/animation/script-tests/request-animation-frame-subframe.html:
    Remove element parameter from window.webkitRequestAnimationFrame.

Canonical link: https://commits.webkit.org/115819@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129808 268f45cc-cd09-0410-ab3c-d52691b4dbfc